css to fix alignment issue in items list

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -147,6 +147,7 @@
   margin-left: -36px;
   width: 140px;
   text-align: center;
+  font-weight: 500;
 }
 
 
